--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lunch:dev": "nodemon ./src/bot.ts",
-    "lunch:start": "forever start ./dist/bot.js",
+    "lunch:start": "tsc && forever start ./dist/bot.js",
     "format": "prettier --write \"./src/**/**.ts\"",
     "build": "tsc"
   },
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "forever": "^4.0.3",
     "notenv": "^2.0.3",
     "telegraf": "^4.11.2",
     "telegram-keyboard": "^2.3.2",
