--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "firebase-admin": "^11.4.1",
     "forever": "^4.0.3",
     "notenv": "^2.0.3",
     "telegraf": "^4.11.2",
