--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ yt-downloader-bot-f6eb7-firebase-adminsdk-dldgi-ee7993ed5e.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+*.ytd
+
 # Runtime data
 pids
 *.pid
