fix stream error & add 2K and 4K support

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ lerna-debug.log*
 *.exe
 yt-downloader-bot-f6eb7-firebase-adminsdk-dldgi-ee7993ed5e.json
 
+yt-downloader-bot-f6eb7-firebase-adminsdk-dldgi-3d0c1918e1.json
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
